feat(modules): added client and modularization of project